# SalesControl

./: db.docker-compose.yml  main.py  package-lock.json  package.json  pyproject.toml  script.sql
app/controller/: __init__.py  client.py  home.py  login.py  orders.py  product.py  user.py
app/model/: __init__.py  client.py  login.py  orders.py  product.py  user.py
app/routers/: __init__.py  client.py  orders.py  product.py  user.py
db/: __init__.py  connection.py  hashing.py  jwttoken.py  oauth.py
db/classes/: Client.py  Sales.py  __init__.py  product.py
db/interface/: controller.py  model.py  router.py
db/schema/: Client.py  Sales.py  product.py
frontend/: package-lock.json  package.json  package1.json
frontend/src/: App.js  App.jsx  index.js
frontend/src/app/: HomeStyle.css  home.js  home.jsx  homeApi.js  homeApi.jsx  util.js  util.jsx
frontend/src/app/Menu/: Orders.js  index.jsx  listItems.js  rotas.jsx
frontend/src/app/layout/: ButtonAdd.jsx  Chart.jsx  Copyright.jsx  Dashboard.jsx  Deposits.jsx  Options.jsx  Orders.jsx  Router.jsx  Sale.jsx  TablePagination.jsx  Title.jsx  index.jsx  listItems.jsx  rotas.jsx
frontend/src/app/login/: index.js  index.jsx  login.js  login.jsx  login.router.js  loginApi.js  loginApi.jsx  register.js
frontend/src/app/login/assets/: script.js  style.css
frontend/src/app/services/: api.js
frontend/src/app/services/Sale/: index.jsx  list.jsx
frontend/src/app/services/client/: api.js  detail.jsx  index.jsx  insert.jsx  list.jsx  search.jsx  update.jsx
tests/: test_controlsale.py
(+28 files in other folders)
