[tool.poetry]
name = "controlSale"
version = "0.1.0"
description = ""
authors = ["Vinicius Miranda <vncs2012@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.86.0"
uvicorn = "^0.19.0"
SQLAlchemy = "^1.4.44"
python-multipart = "^0.0.5"
passlib = "^1.7.4"
python-jose = "^3.3.0"
cryptography = "^38.0.3"
openpyxl = "^3.0.10"
pymongo = "^4.3.2"
psycopg2 = "^2.9.5"
CacheControl = "^0.12.12"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
